Fri Oct 19 09:26:15 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* gnome-mud.desktop: Added translation into swedish.

Fri Oct 19 04:00:33 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.desktop: make "gnome-gmush.png" our icon for now.

Fri Oct 19 03:19:03 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.desktop: added GNOME menu entry for gnome-mud.
	It's missing an icon... artists around?

	* Makefile.am: install .desktop file into the apps dir.

Thu Oct 18 16:36:21 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/sv.po: updated.

Thu Oct 18 16:28:52 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/wizard.c: fixed typos (conection -> connection).

	* po/{ca,es,sv}.po: fixed the generated fuzzy's.

Thu Oct 18 15:38:25 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, ROADMAP: doc updates.

Thu Oct 18 14:38:10 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c [open_connection]: A little fix when not entering a 
	port.

Thu Oct 18 10:22:21 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: TODO removed, ROADMAP added.

	* configure.in: Old things for version.h removed.

	* Alot of code cleanup, removed various comments, and fixed code
	with warnings, etc...

Wed Oct 17 17:19:29 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: Removed.

	* ROADMAP: Added.

Wed Oct 17 15:53:40 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: tons of grammar fixes and updates to the Catalan
	translation.

Tue Oct 16 14:55:22 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: Translation fixes.

	* README: Updated a bit.

Tue Oct 16 13:48:00 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: really commit po/ fixes.

Fri Oct 12 13:45:53 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: added new releases and dates.

Fri Oct 12 09:36:25 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: Added some more.
